--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <section class="container mt-5">
              <h1 class="text-center fw-bold fs-2">Happy Clients says</h1>
             <div class="d-flex gap-4 mt-5">
-               <div class="d-flex flex-column justify-content-center align-items-center border border-dark 
-                border-2 rounded-2 p-3">
+               <div class="d-flex flex-column justify-content-center align-items-center border 
+                 rounded-2 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                    <p class="text-center">
                        Slate helps you see how many more days you need 
                        to work to reach your financial goal for the month and year.
@@ -209,8 +209,8 @@
                    <h3 class="fw-semibold fs-6">Banker</h3>
                </div>
 
-               <div class="d-flex flex-column justify-content-center align-items-center border border-dark 
-                border-2 rounded-2 p-3">
+               <div class="d-flex flex-column justify-content-center align-items-center border 
+               rounded-2 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                 <p class="text-center">
                     Slate helps you see how many more days you need 
                     to work to reach your financial goal for the month and year.
@@ -220,8 +220,8 @@
                 <h3 class="fw-semibold fs-6">Banker</h3>
             </div>
 
-            <div class="d-flex flex-column justify-content-center align-items-center border border-dark 
-             border-2 rounded-2 p-3">
+               <div class="d-flex flex-column justify-content-center align-items-center border 
+                 rounded-2 p-3 shadow-lg p-3 mb-5 bg-body rounded">
                 <p class="text-center">
                     Slate helps you see how many more days you need 
                     to work to reach your financial goal for the month and year.
@@ -230,6 +230,69 @@
                 <h2 class="fw-bold fs-5 mt-2">Prosanta Roy</h2>
                 <h3 class="fw-semibold fs-6">Developer</h3>
             </div>
+            </div>
+        </section>
+        <!-------
+            ----Frequently Asked Questions--
+        ----------------------->
+        <section class="container mt-5">
+            <h1 class="text-center fw-bold fs-2">Frequently Asked Questions</h1>
+            <div class="d-flex gap-4 mt-5 align-items-center justify-content-center">
+               <div>
+                <div class="accordion" id="accordionPanelsStayOpenExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                            What  the difference between event design and event planning? 
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                            How early do we need to start planning an event?
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                            What is your refund and cancellation policy?
+                        </button>
+                      </h2>
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingfour">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapsefour" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                              What is your refund and cancellation policy?
+                          </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                          <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+               </div>
+               <div>
+                   <img src="images/people.png" alt="">
+               </div>
             </div>
         </section>
     </main>
