--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         <!--Banner-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" 
+               class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria- 
+               label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria- 
+               label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -78,11 +81,13 @@
                 </div>
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" 
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" 
+             data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -242,37 +247,64 @@
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs- 
+                         target="#panelsStayOpen-collapseOne" aria-expanded="true" aria- 
+                          controls="panelsStayOpen-collapseOne">
                             What  the difference between event design and event planning? 
                         </button>
                       </h2>
-                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria- 
+                       labelledby="panelsStayOpen-headingOne">
                         <div class="accordion-body">
-                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          <strong>This is the first item's accordion body.</strong> It is shown by 
+                           default, until the collapse plugin adds the appropriate classes that we use to 
+                            style each element. These classes control the overall appearance, as well as 
+                             the showing and hiding via CSS transitions. You can modify any of this with 
+                            custom CSS or overriding our default variables. It's also worth noting that 
+                            just about any HTML can go within the <code>.accordion-body</code>, though 
+                            the transition does limit overflow.
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
+                         data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria- 
+                          controls="panelsStayOpen-collapseTwo">
                             How early do we need to start planning an event?
                         </button>
                       </h2>
-                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria- 
+                       labelledby="panelsStayOpen-headingTwo">
                         <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          <strong>This is the second item's accordion body.</strong> It is hidden by 
+                           default, until the collapse plugin adds the appropriate classes that we use to 
+                            style each element. These classes control the overall appearance, as well as 
+                             the showing and hiding via CSS transitions. You can modify any of this with 
+                              custom CSS or overriding our default variables. It's also worth noting that 
+                               just about any HTML can go within the <code>.accordion-body</code>, though 
+                            the transition does limit overflow.
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" 
+                         data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria- 
+                          controls="panelsStayOpen-collapseThree">
                             What is your refund and cancellation policy?
                         </button>
                       </h2>
-                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria- 
+                       labelledby="panelsStayOpen-headingThree">
                         <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          <strong>This is the third item's accordion body.</strong> It is hidden by 
+                           default, until the collapse plugin adds the appropriate classes that we use to 
+                            style each element. These classes control the overall appearance, as well as 
+                             the showing and hiding via CSS transitions. You can modify any of this with 
+                            custom CSS or overriding our default variables. It's also worth noting that 
+                            just about any HTML can go within the <code>.accordion-body</code>, though 
+                            the transition does limit overflow.
                         </div>
                       </div>
                     </div>
@@ -282,9 +314,16 @@
                               What is your refund and cancellation policy?
                           </button>
                         </h2>
-                        <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                        <div id="panelsStayOpen-collapsefour" class="accordion-collapse collapse" aria- 
+                         labelledby="panelsStayOpen-headingThree">
                           <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>This is the third item's accordion body.</strong> It is hidden by 
+                             default, until the collapse plugin adds the appropriate classes that we use 
+                              to style each element. These classes control the overall appearance, as well 
+                               as the showing and hiding via CSS transitions. You can modify any of this 
+                                with custom CSS or overriding our default variables. It's also worth 
+                              noting that just about any HTML can go within the <code>.accordion- 
+                             body</code>, though the transition does limit overflow.
                           </div>
                         </div>
                     </div>
