--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingfour">
-                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapsefour" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                          <button class="accordion-button collapsed" type="button" data-bs- 
+                           toggle="collapse" data-bs-target="#panelsStayOpen-collapsefour" aria- 
+                            expanded="false" aria-controls="panelsStayOpen-collapseThree">
                               What is your refund and cancellation policy?
                           </button>
                         </h2>
